# cpp_modules

./: .gitignore  CMakeLists.txt  README.md
cpp_00/: .gitignore
cpp_00/ex00/: Makefile  megaphone.cpp
cpp_00/ex01/: Contact.cpp  Contact.hpp  Makefile  PhoneBook.cpp  PhoneBook.hpp  main.cpp
cpp_01/: .gitignore
cpp_01/ex00/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  newZombie.cpp  randomChump.cpp
cpp_01/ex01/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  zombieHorde.cpp
cpp_01/ex02/: Makefile  main.cpp
cpp_01/ex03/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp  main.cpp
cpp_01/ex04/: Makefile  main.cpp  test.txt
cpp_01/ex05/: Harl.cpp  Harl.hpp  Makefile  main.cpp
cpp_01/ex06/: Harl.cpp  Harl.hpp  Makefile  main.cpp
cpp_02/: .gitignore
cpp_02/ex00/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
cpp_02/ex01/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
cpp_02/ex02/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
cpp_02/ex03/: Fixed.cpp  Fixed.hpp  Makefile  Point.cpp  Point.hpp  bsp.cpp  main.cpp
cpp_03/: .gitignore
cpp_03/ex00/: ClapTrap.cpp  ClapTrap.hpp  Makefile  main.cpp
cpp_03/ex01/: ClapTrap.cpp  ClapTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
cpp_03/ex02/: ClapTrap.cpp  ClapTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  main.cpp
cpp_03/ex03/: ClapTrap.cpp  ClapTrap.hpp  DiamondTrap.cpp  DiamondTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
cpp_04/: .gitignore
cpp_04/ex00/: .gitignore  Animal.cpp  Animal.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.cpp  WrongAnimal.hpp  WrongCat.cpp  WrongCat.hpp  main.cpp
cpp_04/ex01/: Animal.cpp  Animal.hpp  Brain.cpp  Brain.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  main.cpp
cpp_04/ex02/: Animal.cpp  Animal.hpp  Brain.cpp  Brain.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  main.cpp
cpp_04/ex03/: AMateria.cpp  AMateria.hpp  CMakeLists.txt  Character.cpp  Character.hpp  Cure.cpp  Cure.hpp  ICharacter.hpp  IMateriaSource.hpp  Ice.cpp  Ice.hpp  Makefile  MateriaSource.cpp  MateriaSource.hpp  main.cpp
cpp_05/: .gitignore
cpp_05/ex00/: Bureaucrat.cpp  Bureaucrat.hpp  Makefile  bureaucrat  main.cpp
cpp_05/ex01/: Bureaucrat.cpp  Bureaucrat.hpp  Form.cpp  Form.hpp  Makefile  main.cpp
cpp_05/ex02/: AForm.cpp  AForm.hpp  Bureaucrat.cpp  Bureaucrat.hpp  Makefile  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  main.cpp
cpp_05/ex03/: AForm.cpp  Bureaucrat.hpp  Intern.cpp  Intern.hpp  Makefile  PresidentialPardonForm.cpp  main.cpp
cpp_06/: .gitignore
cpp_06/ex00/: Makefile  ScalarConverter.cpp  ScalarConverter.hpp  convert  main.cpp
cpp_06/ex01/: Makefile  Serializer.cpp  Serializer.hpp  main.cpp
cpp_06/ex02/: A.hpp  B.hpp  Base.cpp  Base.hpp  C.hpp  Makefile  main.cpp
cpp_07/: .gitignore
cpp_07/ex00/: Makefile  main.cpp  whatever.hpp
cpp_07/ex01/: Makefile  iter.hpp  main.cpp
cpp_07/ex02/: Array.hpp  Array.tpp  Makefile  main.cpp
cpp_08/: .gitignore
cpp_08/ex00/: Makefile  easyfind  easyfind.hpp  easyfind.tpp  main.cpp
cpp_08/ex01/: Makefile  Span.cpp  Span.hpp  main.cpp
cpp_08/ex02/: Makefile  MutantStack.hpp  MutantStack.tpp  main.cpp
cpp_09/: .gitignore
cpp_09/ex00/: BitcoinExchange.cpp  BitcoinExchange.hpp  Date.cpp  Date.hpp  Makefile  main.cpp
cpp_09/ex01/: Makefile  RPN.cpp  RPN.hpp  main.cpp  tests.txt
cpp_09/ex02/: Makefile  PmergeMe.cpp  PmergeMe.hpp  main.cpp
learning/: hello.cpp
learning/00_Basics/: cpp_00.cpp
learning/00_Basics/class_sample/: Sample.hpp  main.cpp
learning/00_Basics/comparisons/: Sample.cpp  Sample.hpp  main.cpp
learning/00_Basics/const_sample/: Sample.cpp  main.cpp
learning/00_Basics/get_and_set/: Sample.cpp  Sample.hpp  main.cpp
learning/00_Basics/init_list/: main.cpp
learning/00_Basics/pointers/: Sample.cpp  Sample.hpp  main.cpp
learning/00_Basics/static/: Sample.cpp  Sample.hpp  main.cpp
learning/00_Basics/visibility/: Sample.hpp
learning/01_Basics2/filestream/: fstream1.cpp
learning/01_Basics2/new_delete/: new.cpp  new2.cpp
learning/01_Basics2/references/: ref1.cpp  ref2.cpp  ref3.cpp
learning/02/ad_hoc_polym/: Sample.cpp  main.cpp
learning/02/operator_overload/: Sample.cpp  main.cpp
learning/02_Canoncal_Form/ad_hoc_polym/: Sample.hpp
learning/02_Canoncal_Form/canonical_form/: main.cpp
learning/03_Inheritance/: heritage.cpp  heritage2.cpp
learning/04_Polymorphism/: poly1.cpp  poly1_virtual.cpp  poly2.cpp
learning/05_Nested_Exceptions/: exceptions.cpp  nested.cpp
learning/06_Casts/: 00_casts.cpp  01_reinterpretation.c  const_cast.cpp  dynamic.cpp  explicit.cpp  operator.cpp  reinterpret.cpp  static.cpp  static2.cpp
learning/07_Templates/: default_types.cpp  specialization.cpp  template_classes.cpp  templates1.cpp
learning/08_STL/: stl1.cpp  stl2.cpp
learning/Inheritance_Polym/: inheritance.cpp
learning/class_sample/: Sample.cpp  Sample.hpp  main.cpp
learning/const_sample/: Sample.hpp
learning/visibility/: Sample.cpp  main.cpp
